--- a/custom_components/aguaiot/manifest.json
+++ b/custom_components/aguaiot/manifest.json
@@ -2,6 +2,7 @@
   "domain": "aguaiot",
   "name": "Micronova Agua IOT",
   "documentation": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/",
+  "issue_tracker": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/issues",
   "version": "0.0.11",
   "requirements": ["py-agua-iot==0.0.11"],
   "dependencies": [],
