--- a/custom_components/aguaiot/manifest.json
+++ b/custom_components/aguaiot/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "aguaiot",
   "name": "Micronova Agua IOT",
-  "documentation": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/",
-  "issue_tracker": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/issues",
-  "version": "0.0.11",
-  "requirements": ["py-agua-iot==0.0.11"],
-  "dependencies": [],
   "codeowners": ["@vincentwolsink"],
-  "iot_class": "cloud_polling",
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/",
   "integration_type": "device",
-  "config_flow": true
+  "iot_class": "cloud_polling",  
+  "issue_tracker": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/issues",
+  "requirements": ["py-agua-iot==0.0.11"],
+  "version": "0.0.11"
 }
