--- a/custom_components/aguaiot/manifest.json
+++ b/custom_components/aguaiot/manifest.json
@@ -5,9 +5,9 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/",
-  "integration_type": "device",
+  "integration_type": "hub",
   "iot_class": "cloud_polling",  
   "issue_tracker": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/issues",
-  "requirements": ["py-agua-iot==0.0.13"],
-  "version": "0.1.2"
+  "requirements": ["py-agua-iot==0.0.14"],
+  "version": "0.1.3"
 }
