--- a/custom_components/aguaiot/manifest.json
+++ b/custom_components/aguaiot/manifest.json
@@ -8,6 +8,7 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",  
   "issue_tracker": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/issues",
+  "loggers": ["py_agua_iot"],
   "requirements": ["py-agua-iot==0.0.17"],
   "version": "0.1.4"
 }
