--- a/custom_components/aguaiot/manifest.json
+++ b/custom_components/aguaiot/manifest.json
@@ -8,6 +8,6 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",  
   "issue_tracker": "https://github.com/vincentwolsink/home_assistant_micronova_agua_iot/issues",
-  "requirements": ["httpx"],
-  "version": "0.3.8"
+  "requirements": ["httpx", "simpleeval"],
+  "version": "0.4.0"
 }
