--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -5,6 +5,7 @@ jobs:
   ruff:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: astral-sh/ruff-action@v3.5.1
       - uses: astral-sh/ruff-action@v3
         with:
