--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,10 +1,6 @@
 name: Validate
 
-on:
-  pull_request:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+on: pull_request
 
 jobs:
   validate-hacs:
